@@ -1,3 +1,9 @@
+2008-09-15  Tomas Bzatek  <tbzatek@redhat.com>
+
+	* daemon/gvfsbackendsmb.c:
+	Revert commit #1772.
+	Set the information on the mount spec from the original URI
+
 2008-09-15  Christian Kellner  <gicmo@gnome.org>
 
 	* client/gdaemonfile.c:
